--- a/l10n/po/ja_JP/_guides/amazon-lambda.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-lambda.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-12-22 15:04+0000\n"
+"POT-Creation-Date: 2021-12-24 15:04+0000\n"
 "PO-Revision-Date: 2021-03-07 06:11+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
@@ -1158,28 +1158,37 @@ msgstr "Amazon Alexa 統合"
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda.adoc:639
-msgid "To use Alexa with Quarkus native, please add the following extension."
-msgstr "Alexa を Quarkus ネイティブで使用するには、以下のエクステンションを追加してください。"
+msgid "To use Alexa with Quarkus native, you need to use the https://github.com/quarkiverse/quarkus-amazon-alexa[Quarkus Amazon Alexa extension hosted at the Quarkiverse Hub]."
+msgstr ""
 
 #. type: delimited block -
-#: upstream/_guides/amazon-lambda.adoc:646
+#: upstream/_guides/amazon-lambda.adoc:647
 #, no-wrap
 msgid ""
-"        <dependency>\n"
-"            <groupId>io.quarkus</groupId>\n"
-"            <artifactId>quarkus-amazon-alexa</artifactId>\n"
-"        </dependency>\n"
+"<dependency>\n"
+"    <groupId>io.quarkiverse.alexa</groupId>\n"
+"    <artifactId>quarkus-amazon-alexa</artifactId>\n"
+"    <version>${quarkus-amazon-alexa.version}</version> <1>\n"
+"</dependency>\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda.adoc:649
+msgid "Define the latest version of the extension in your POM file."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/amazon-lambda.adoc:651
 msgid "Create your Alexa handler, as normal, by sub-classing the abstract `com.amazon.ask.SkillStreamHandler`, and add your request handler implementation."
 msgstr "通常通り、抽象クラス `com.amazon.ask.SkillStreamHandler` をサブクラス化して Alexa ハンドラーを作成し、リクエストハンドラーの実装を追加します。"
 
 #. type: Plain text
-#: upstream/_guides/amazon-lambda.adoc:650
+#: upstream/_guides/amazon-lambda.adoc:652
 msgid "That's all there is to it!"
 msgstr "それだけだよ!"
+
+#~ msgid "To use Alexa with Quarkus native, please add the following extension."
+#~ msgstr "Alexa を Quarkus ネイティブで使用するには、以下のエクステンションを追加してください。"
 
 #~ msgid "The dependency for `quarkus-test-amazon-lambda` will also need to be added to your build.gradle."
 #~ msgstr "`quarkus-test-amazon-lambda` の依存関係も build.gradle に追加する必要があります。"
