--- a/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-12-22 15:04+0000\n"
+"POT-Creation-Date: 2021-12-24 15:04+0000\n"
 "PO-Revision-Date: 2021-04-30 16:54+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -677,7 +677,7 @@ msgid ""
 "        cfg.setAuthServerUrl(\"http://localhost:8081/auth/realms/quarkus/\");\n"
 "        cfg.setClientId(\"quarkus\");\n"
 "        cfg.getCredentials().setSecret(\"secret\");\n"
-"        Uni<OidcClient> client = clients.newClient(config);\n"
+"        Uni<OidcClient> client = clients.newClient(cfg);\n"
 "        // use this client to get the token\n"
 "    }\n"
 "}\n"
