--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-all-build-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-all-build-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-22 15:09+0000\n"
+"POT-Creation-Date: 2021-12-24 15:10+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1549,7 +1549,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-all-build-items.adoc:421
 #, no-wrap
 msgid ""
-"`ArtifactKey artifact` :: +++<i>No Javadoc found</i>+++\n"
+"`GACT artifact` :: +++<i>No Javadoc found</i>+++\n"
 "`Set resources` :: +++<i>No Javadoc found</i>+++"
 msgstr ""
 
