Correct scheduler-reference.adoc.po

--- a/l10n/po/ja_JP/_guides/scheduler-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/scheduler-reference.adoc.po
@@ -6,23 +6,22 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-12-22 15:04+0000\n"
-"PO-Revision-Date: 2021-07-20 15:46+0900\n"
+"POT-Creation-Date: 2021-10-06 08:09+0000\n"
+"PO-Revision-Date: 2021-12-05 21:58+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/scheduler-reference.adoc:6
-#, fuzzy, no-wrap
-#| msgid "Quarkus - Scheduler Reference Guide"
+#, no-wrap
 msgid "Scheduler Reference Guide"
 msgstr "スケジューラーリファレンスガイド"
 
@@ -105,8 +104,6 @@ msgstr "CRON 式で使用される構文は `quarkus.scheduler.cron-type` プロ
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:59
-#, fuzzy
-#| msgid "The `cron` attribute supports <<config-reference#using_property_expressions,Property Expressions>> including default values and nested Property Expressions. (Note that \"{property.path}\" style expressions are still supported but don't offer the full functionality of Property Expressions.)"
 msgid "The `cron` attribute supports <<config-reference#property-expressions,Property Expressions>> including default values and nested Property Expressions. (Note that \"{property.path}\" style expressions are still supported but don't offer the full functionality of Property Expressions.)"
 msgstr "`cron` 属性は、デフォルト値やネストされたプロパティ式を含む <<config-reference#using_property_expressions,プロパティ式>> をサポートしています。(なお、\"{property.path}\"スタイルの表現もサポートされていますが、プロパティ式の完全な機能は提供されていません)。"
 
@@ -192,9 +189,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:103
-#, fuzzy
 msgid "The `every` attribute supports <<config-reference#property-expressions,Property Expressions>> including default values and nested Property Expressions. (Note that `\"{property.path}\"` style expressions are still supported but don't offer the full functionality of Property Expressions.)"
-msgstr "`every` 属性は、デフォルト値やネストされたProperty Expressionを含む link:config-reference.html#using_property_expressions[Property]Expressionをサポートしています。(なお、 `\"{property.path}\"` スタイル式はサポートされていますが、Property Expressionsの完全な機能は提供されていません)。"
+msgstr "`every` 属性は、デフォルト値やネストされたプロパティ式を含む <<config-reference#property-expressions,プロパティ式>> をサポートしています。(なお、 `\"{property.path}\"` スタイル式はサポートされていますが、プロパティ式の完全な機能は提供されていません)。"
 
 #. type: Block title
 #: upstream/_guides/scheduler-reference.adoc:104
@@ -214,7 +210,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:113
 msgid "Intervals can be disabled by setting their value to `\"off\"` or `\"disabled\"`.  So for example a Property Expression with the default value `\"off\"` can be used to disable the trigger if its Config Property has not been set."
-msgstr "Intervals は、その値を `\"off\"` または `\"disabled\"` に設定することで無効にすることができます。そのため、例えば、デフォルト値 `\"off\"` のProperty Expressionは、そのConfig Propertyが設定されていない場合、トリガーを無効にするために使用することができます。"
+msgstr "Intervals は、その値を `\"off\"` または `\"disabled\"` に設定することで無効にすることができます。そのため、例えば、デフォルト値 `\"off\"` のプロパティ式は、そのConfig Propertyが設定されていない場合、トリガーを無効にするために使用することができます。"
 
 #. type: Block title
 #: upstream/_guides/scheduler-reference.adoc:114
@@ -257,9 +253,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:137
-#, fuzzy
 msgid "The `identity` attribute supports <<config-reference#property-expressions,Property Expressions>> including default values and nested Property Expressions. (Note that `\"{property.path}\"` style expressions are still supported but don't offer the full functionality of Property Expressions.)"
-msgstr "`identity` 属性は、デフォルト値やネストされたProperty Expressionを含む link:config-reference.html#using_property_expressions[Property]Expressionをサポートしています。(なお、 `\"{property.path}\"` スタイル式はサポートされていますが、Property Expressionsの完全な機能は提供されていません)。"
+msgstr "`identity` 属性は、デフォルト値やネストされたプロパティ式を含む link:config-reference.html#using_property_expressions[プロパティ式]をサポートしています。(なお、 `\"{property.path}\"` スタイル式はサポートされていますが、プロパティ式の完全な機能は提供されていません)。"
 
 #. type: delimited block -
 #: upstream/_guides/scheduler-reference.adoc:143
@@ -323,9 +318,8 @@ msgstr "`@Scheduled#delay()` がゼロよりも大きい値に設定されてい
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:176
-#, fuzzy
 msgid "The main advantage over `@Scheduled#delay()` is that the value is configurable.  The `delay` attribute supports <<config-reference#property-expressions,Property Expressions>> including default values and nested Property Expressions. (Note that `\"{property.path}\"` style expressions are still supported but don't offer the full functionality of Property Expressions.)"
-msgstr "`@Scheduled#delay()` と比較した場合の主な利点は、値が設定可能であることです。 `delay` 属性は、デフォルト値やネストされたProperty Expressionを含む link:config-reference.html#using_property_expressions[Property]Expressionをサポートしています。(なお、 `\"{property.path}\"` スタイルの表現はサポートされていますが、Property Expressionsの完全な機能は提供されていません)。"
+msgstr "`@Scheduled#delay()` と比較した場合の主な利点は、値が設定可能であることです。 `delay` 属性は、デフォルト値やネストされたプロパティ式を含む link:config-reference.html#using_property_expressions[プロパティ式]をサポートしています。(なお、 `\"{property.path}\"` スタイルの表現はサポートされていますが、プロパティ式の完全な機能は提供されていません)。"
 
 #. type: delimited block -
 #: upstream/_guides/scheduler-reference.adoc:182
@@ -375,26 +369,22 @@ msgstr "同時実行はスキップされます。"
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:203
 #: upstream/_guides/scheduler-reference.adoc:258
-#, fuzzy
 msgid "A CDI event of type `io.quarkus.scheduler.SkippedExecution` is fired when an execution of a scheduled method is skipped."
 msgstr "スケジュールされたメソッドの実行がスキップされると、 `io.quarkus.scheduler.SkippedExecution` のタイプのCDIイベントが発生します。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:205
-#, fuzzy
 msgid "Note that only executions within the same application instance are considered. This feature is not intended to work across the cluster."
 msgstr "同じアプリケーションインスタンス内での実行のみが考慮されることに注意してください。この機能は、クラスター間での動作を意図したものではありません。"
 
 #. type: Title ===
 #: upstream/_guides/scheduler-reference.adoc:207
-#, fuzzy, no-wrap
-#| msgid "Concurrent Execution"
+#, no-wrap
 msgid "Conditional Execution"
-msgstr "同時実行"
+msgstr "条件付き実行"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:211
-#, fuzzy
 msgid "You can define the logic to skip any execution of a scheduled method via `@Scheduled#skipExecutionIf()`.  The specified bean class must implement `io.quarkus.scheduler.Scheduled.SkipPredicate` and the execution is skipped if the result of the `test()` method is `true`."
 msgstr "`@Scheduled#skipExecutionIf()` を通じて、スケジュールされたメソッドの実行をスキップするロジックを定義することができます。指定されたBeanクラスは、 `io.quarkus.scheduler.Scheduled.SkipPredicate` を実装する必要があり、 `test()` メソッドの結果が `true` である場合に実行がスキップされます。"
 
@@ -445,25 +435,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:234
-#, fuzzy
 msgid "A bean instance of `MyPredicate.class` is used to evaluate whether an execution should be skipped. There must be exactly one bean that has the specified class in its set of bean types, otherwise the build fails."
-msgstr "`MyPredicate.class` の Bean インスタンスは、実行をスキップすべきかどうかを評価するために使用されます。ビーンタイプのセットに指定されたクラスを持つビーンが正確に1つ存在する必要があり、そうでない場合はビルドが失敗します。"
+msgstr "`MyPredicate.class` の Bean インスタンスは、実行をスキップすべきかどうかを評価するために使用されます。Beanタイプのセットに指定されたクラスを持つBeanが正確に1つ存在する必要があり、そうでない場合はビルドが失敗します。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:235
-#, fuzzy
 msgid "The scope of the bean must be active during execution."
-msgstr "ビーンのスコープは，実行中にアクティブでなければならない。"
+msgstr "Beanのスコープは，実行中にアクティブでなければならない。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:236
-#, fuzzy
 msgid "`Jobs.everySecond()` is skipped until `MyService.isStarted()` returns `true`."
 msgstr "`Jobs.everySecond()` は、 `MyService.isStarted()` が `true` を返すまでスキップされます。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:238
-#, fuzzy
 msgid "Note that this is an equivalent of the following code:"
 msgstr "なお、これは以下のコードと同等のものです。"
 
@@ -482,7 +468,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:256
-#, fuzzy
 msgid "The main idea is to keep the the logic to skip the execution outside the scheduled business methods so that it can be reused and refactored easily."
 msgstr "主なアイデアは、スケジュールされたビジネスメソッドの外で実行をスキップするロジックを維持することで、再利用やリファクタリングが容易にできるようにすることです。"
 
@@ -567,9 +552,7 @@ msgstr "プログラムスケジューリング"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:292
-#, fuzzy
-#| msgid "If you need to schedule a job programmatically you'll need to add the link:quartz[Quartz extension] and use the Quartz API directly."
-msgid "If you need to schedule a job programmatically you'll need to add the xref:quartz.adoc[Quartz extension] and use the Quartz API directly."
+msgid "If you need to schedule a job programmatically you'll need to add the link:quartz[Quartz extension] and use the Quartz API directly."
 msgstr "プログラムでジョブをスケジュールする必要がある場合は、 link:quartz[Quartzエクステンション] を追加してQuartz APIを直接使用する必要があります。"
 
 #. type: Block title
@@ -628,27 +611,24 @@ msgstr "テストを実行する際には、スケジューラーを無効にす
 
 #. type: Title ==
 #: upstream/_guides/scheduler-reference.adoc:325
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Metrics"
 msgstr "メトリクス"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:328
-#, fuzzy
 msgid "Some basic metrics are published out of the box if `quarkus.scheduler.metrics.enabled` is set to `true` and a metrics extension is present."
-msgstr "`quarkus.scheduler.metrics.enabled` が `true` に設定されていて、metrics extension が存在する場合、いくつかの基本的なメトリクスがすぐに公開されます。"
+msgstr "`quarkus.scheduler.metrics.enabled` が `true` に設定されていて、metrics エクステンションが存在する場合、いくつかの基本的なメトリクスがすぐに公開されます。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:330
-#, fuzzy
-msgid "If the xref:micrometer.adoc[Micrometer extension] is present, then a `@io.micrometer.core.annotation.Timed` interceptor binding is added to all `@Scheduled` methods automatically (unless it's already present) and a `io.micrometer.core.instrument.Timer` with name `scheduled.methods` and a `io.micrometer.core.instrument.LongTaskTimer` with name `scheduled.methods.running` are registered. The fully qualified name of the declaring class and the name of a `@Scheduled` method are used as tags."
-msgstr "link:micrometer[Micrometer 拡張]が存在する場合、すべての `@Scheduled` メソッドに `@io.micrometer.core.annotation.Timed` インターセプターバインディングが自動的に追加され (すでに存在している場合を除く)、 `scheduled.methods` という名前の `io.micrometer.core.instrument.Timer` と `scheduled.methods.running` という名前の `io.micrometer.core.instrument.LongTaskTimer` が登録されます。タグとしては、宣言したクラスの完全修飾名と、 `@Scheduled` のメソッド名が使われます。"
+msgid "If the link:micrometer[Micrometer extension] is present, then a `@io.micrometer.core.annotation.Timed` interceptor binding is added to all `@Scheduled` methods automatically (unless it's already present) and a `io.micrometer.core.instrument.Timer` with name `scheduled.methods` and a `io.micrometer.core.instrument.LongTaskTimer` with name `scheduled.methods.running` are registered. The fully qualified name of the declaring class and the name of a `@Scheduled` method are used as tags."
+msgstr "link:micrometer[Micrometer エクステンション]が存在する場合、すべての `@Scheduled` メソッドに `@io.micrometer.core.annotation.Timed` インターセプターバインディングが自動的に追加され (すでに存在している場合を除く)、 `scheduled.methods` という名前の `io.micrometer.core.instrument.Timer` と `scheduled.methods.running` という名前の `io.micrometer.core.instrument.LongTaskTimer` が登録されます。タグとしては、宣言したクラスの完全修飾名と、 `@Scheduled` のメソッド名が使われます。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:332
-#, fuzzy
-msgid "If the xref:smallrye-metrics.adoc[SmallRye Metrics extension] is present, then a `@org.eclipse.microprofile.metrics.annotation.Timed` interceptor binding is added to all `@Scheduled` methods automatically (unless it's already present) and a `org.eclipse.microprofile.metrics.Timer` is created for each `@Scheduled` method. The name consists of the fully qualified name of the declaring class and the name of a `@Scheduled` method. The timer has a tag `scheduled=true`."
-msgstr "link:smallrye-metrics[SmallRye Metrics 拡張]が存在する場合、 `@org.eclipse.microprofile.metrics.annotation.Timed` インターセプターバインディングがすべての `@Scheduled` メソッドに自動的に追加され（すでに存在している場合を除く）、 `org.eclipse.microprofile.metrics.Timer` が各 `@Scheduled` メソッドに対して作成されます。名前は、宣言したクラスの完全修飾名と `@Scheduled` メソッドの名前で構成されます。タイマーには、タグ `scheduled=true` が付いています。"
+msgid "If the link:smallrye-metrics[SmallRye Metrics extension] is present, then a `@org.eclipse.microprofile.metrics.annotation.Timed` interceptor binding is added to all `@Scheduled` methods automatically (unless it's already present) and a `org.eclipse.microprofile.metrics.Timer` is created for each `@Scheduled` method. The name consists of the fully qualified name of the declaring class and the name of a `@Scheduled` method. The timer has a tag `scheduled=true`."
+msgstr "link:smallrye-metrics[SmallRye Metrics エクステンション]が存在する場合、 `@org.eclipse.microprofile.metrics.annotation.Timed` インターセプターバインディングがすべての `@Scheduled` メソッドに自動的に追加され（すでに存在している場合を除く）、 `org.eclipse.microprofile.metrics.Timer` が各 `@Scheduled` メソッドに対して作成されます。名前は、宣言したクラスの完全修飾名と `@Scheduled` メソッドの名前で構成されます。タイマーには、タグ `scheduled=true` が付いています。"
 
 #. type: Title ==
 #: upstream/_guides/scheduler-reference.adoc:333
@@ -656,11 +636,3 @@ msgstr "link:smallrye-metrics[SmallRye Metrics 拡張]が存在する場合、 `
 msgid "Configuration Reference"
 msgstr "設定リファレンス"
 
-#~ msgid "If a CRON expression starts with `{` and ends with `}` then the scheduler attempts to find a corresponding config property and use the configured value instead."
-#~ msgstr "CRON式が `{` で始まり `}` で終わる場合、スケジューラーは対応するコンフィグプロパティーを検索し、設定された値を代わりに使用しようとします。"
-
-#~ msgid "If a value starts with `{` and ends with `}` then the scheduler attempts to find a corresponding config property and use the configured value instead."
-#~ msgstr "値が `{` で始まり `}` で終わる場合、スケジューラーは対応するコンフィグプロパティーを探して、設定された値を代わりに使用しようとします。"
-
-#~ msgid "The main advantage over `@Scheduled#delay()` is that the value is configurable.  If the value starts with `{` and ends with `}` then the scheduler attempts to find a corresponding config property and use the configured value instead:"
-#~ msgstr "`@Scheduled#delay()` と比較した場合の主な利点は、値が設定可能であることです。値が `{` で始まり `}` で終わる場合、スケジューラーは対応するコンフィグプロパティーを見つけようとし、代わりに設定された値を使用します。"
