Add machine translation

--- a/l10n/po/ja_JP/_guides/amazon-lambda.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-lambda.adoc.po
@@ -1158,8 +1158,9 @@ msgstr "Amazon Alexa 統合"
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda.adoc:639
+#, fuzzy
 msgid "To use Alexa with Quarkus native, you need to use the https://github.com/quarkiverse/quarkus-amazon-alexa[Quarkus Amazon Alexa extension hosted at the Quarkiverse Hub]."
-msgstr ""
+msgstr "QuarkusネイティブでAlexaを使用するには、 link:https://github.com/quarkiverse/quarkus-amazon-alexa[Quarkiverse HubでホストされているQuarkus Amazon Alexa extension]を使用する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/amazon-lambda.adoc:647
@@ -1174,8 +1175,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda.adoc:649
+#, fuzzy
 msgid "Define the latest version of the extension in your POM file."
-msgstr ""
+msgstr "POMファイルに最新バージョンの拡張機能を定義します。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda.adoc:651
