--- a/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
@@ -6312,8 +6312,9 @@ msgstr "エクステンションがMaven Centralで公開されます。"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:3132
+#, fuzzy
 msgid "Your extension repository is configured to use the <<ecosystem-ci, Ecosystem CI>>."
-msgstr ""
+msgstr "拡張機能のリポジトリは、 link:#ecosystem-ci[Ecosystem CI]を使用するように設定されています。"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:3134
