--- a/l10n/po/ja_JP/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.6.1.Final released - Maintenance release'\n"
@@ -34,26 +34,37 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 2.6.1.Final released - Maintenance release'\n"
+"date: 2021-12-24\n"
+"tags: release\n"
+"synopsis: 2.6.1.Finalは、2.6リリーストレインの最初のメンテナンスリリースであり、今年最後のQuarkusリリースとなります。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc:12
+#, fuzzy
 msgid "2021 has been a tremendous year for Quarkus and today we officially close our 2021 release season with the last maintenance release of the year: 2.6.1.Final is available on Maven Central and ready for consumption!"
-msgstr ""
+msgstr "2021年はQuarkusにとって非常に素晴らしい年となりました。本日、今年最後のメンテナンスリリースで2021年のリリースシーズンを正式に終了します。2.6.1.FinalはMaven Centralで公開されており、すぐに使用することができます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc:14
+#, fuzzy
 msgid "It is a safe upgrade for anyone already using 2.6 and contains dozens of small bugfixes, tweaks and documentation improvements."
-msgstr ""
+msgstr "すでに2.6をお使いの方も安心してアップグレードしていただけますし、何十もの小さなバグフィックス、微調整、ドキュメントの改善が含まれています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc:16
+#, fuzzy
 msgid "Thank you all for taking the time to report issues, build reproducers... it is immensely helpful and instrumental in making Quarkus better every day."
-msgstr ""
+msgstr "問題点の報告や再生産品の作成などに時間を割いていただき、ありがとうございます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc:18
+#, fuzzy
 msgid "Have a nice holiday break if you take one, and happy coding/experimenting if you don't, and see you all next year."
-msgstr ""
+msgstr "また、来年もよろしくお願いします。"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc:19
@@ -63,13 +74,15 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc:22
+#, fuzzy
 msgid "If you are not using 2.6 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.6[2.6 migration guide]."
-msgstr ""
+msgstr "すでに2.6を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.6[2.6移行ガイド]を参照してください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc:24
+#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.6.1.Final[the full changelog of 2.6.1.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.6.1.Final[2.6.1.Finalの全変更履歴はGitHubに]掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc:25
