--- a/l10n/po/ja_JP/_redirects/guides/amazon-iam.md.po
+++ b/l10n/po/ja_JP/_redirects/guides/amazon-iam.md.po
@@ -18,18 +18,18 @@ msgstr ""
 
 #. type: YAML Front Matter: external
 #: upstream/_redirects/guides/amazon-iam.md:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "true"
-msgstr ""
+msgstr "真"
 
 #. type: YAML Front Matter: newUrl
 #: upstream/_redirects/guides/amazon-iam.md:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-iam.html"
-msgstr ""
+msgstr "https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-iam.html"
 
 #. type: YAML Front Matter: permalink
 #: upstream/_redirects/guides/amazon-iam.md:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "/guides/amazon-iam/index.html"
-msgstr ""
+msgstr "/guides/amazon-iam/index.html"
