--- a/l10n/po/ja_JP/_redirects/guides/vault-pki.md.po
+++ b/l10n/po/ja_JP/_redirects/guides/vault-pki.md.po
@@ -18,18 +18,18 @@ msgstr ""
 
 #. type: YAML Front Matter: external
 #: upstream/_redirects/guides/vault-pki.md:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "true"
-msgstr ""
+msgstr "真"
 
 #. type: YAML Front Matter: newUrl
 #: upstream/_redirects/guides/vault-pki.md:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-vault/dev/vault-pki.html"
-msgstr ""
+msgstr "https://quarkiverse.github.io/quarkiverse-docs/quarkus-vault/dev/vault-pki.html"
 
 #. type: YAML Front Matter: permalink
 #: upstream/_redirects/guides/vault-pki.md:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "/guides/vault-pki/index.html"
-msgstr ""
+msgstr "/guides/vault-pki/index.html"
