Translate 2.6.0 release blog entries

--- a/l10n/po/ja_JP/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-24 15:05+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-12-28 09:25+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.6.1.Final released - Maintenance release'\n"
@@ -35,7 +35,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus 2.6.1.Final released - Maintenance release'\n"
+"title: 'Quarkus 2.6.1.Final リリース - メンテナンスリリース'\n"
 "date: 2021-12-24\n"
 "tags: release\n"
 "synopsis: 2.6.1.Finalは、2.6リリーストレインの最初のメンテナンスリリースであり、今年最後のQuarkusリリースとなります。\n"
@@ -44,27 +44,23 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc:12
-#, fuzzy
 msgid "2021 has been a tremendous year for Quarkus and today we officially close our 2021 release season with the last maintenance release of the year: 2.6.1.Final is available on Maven Central and ready for consumption!"
 msgstr "2021年はQuarkusにとって非常に素晴らしい年となりました。本日、今年最後のメンテナンスリリースで2021年のリリースシーズンを正式に終了します。2.6.1.FinalはMaven Centralで公開されており、すぐに使用することができます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc:14
-#, fuzzy
 msgid "It is a safe upgrade for anyone already using 2.6 and contains dozens of small bugfixes, tweaks and documentation improvements."
-msgstr "すでに2.6をお使いの方も安心してアップグレードしていただけますし、何十もの小さなバグフィックス、微調整、ドキュメントの改善が含まれています。"
+msgstr "これは、すでに2.6を使用している誰にとっても安全なアップグレードであり、多くの小さなバグ修正、微調整、ドキュメントの改善が含まれています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc:16
-#, fuzzy
 msgid "Thank you all for taking the time to report issues, build reproducers... it is immensely helpful and instrumental in making Quarkus better every day."
-msgstr "問題点の報告や再生産品の作成などに時間を割いていただき、ありがとうございます。"
+msgstr "問題点の報告や再現手順の作成などに時間を割いていただき、ありがとうございます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc:18
-#, fuzzy
 msgid "Have a nice holiday break if you take one, and happy coding/experimenting if you don't, and see you all next year."
-msgstr "また、来年もよろしくお願いします。"
+msgstr "休暇を取る場合は素敵な休暇をお過ごしください。そうでない場合はコーディング/実験を楽しんでください。来年もお会いしましょう。"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc:19
@@ -74,15 +70,13 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc:22
-#, fuzzy
 msgid "If you are not using 2.6 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.6[2.6 migration guide]."
-msgstr "すでに2.6を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.6[2.6移行ガイド]を参照してください。"
+msgstr "まだ2.6を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.6[2.6移行ガイド]を参照してください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc:24
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.6.1.Final[the full changelog of 2.6.1.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.6.1.Final[2.6.1.Finalの全変更履歴はGitHubに]掲載されています。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.6.1.Final[2.6.1.Finalの完全な変更履歴はGitHub]に掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc:25
