Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/building-native-image.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/building-native-image.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-24 02:19+0000\n"
+"POT-Creation-Date: 2022-01-04 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1034,7 +1034,7 @@ msgstr ""
 #. type: Title ===
 #: upstream/_versions/main/guides/building-native-image.adoc:605
 #, no-wrap
-msgid "Using a distroless base image"
+msgid "Using a Distroless base image"
 msgstr ""
 
 #. type: Plain text
@@ -1069,13 +1069,13 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: upstream/_versions/main/guides/building-native-image.adoc:627
-msgid "Projects generated with https://code.quarkus.io already have this Dockerfile in the `src/main/docker` directory."
+#: upstream/_versions/main/guides/building-native-image.adoc:629
+msgid "Quarkus provides the `quay.io/quarkus/quarkus-distroless-image:1.0` image.  It contains the required packages to run a native executable and is only **9Mb**.  Just add your application on top of this image, and you will get a tiny container image."
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/building-native-image.adoc:631
-msgid "Quarkus provides the `quay.io/quarkus/quarkus-distroless-image:1.0` image.  It contains the required packages to run a native executable and is only **9Mb**.  Just add your application on top of this image, and you will get a tiny container image."
+msgid "Distroless images should not be used in production without rigorous testing."
 msgstr ""
 
 #. type: Title ===
